@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* shakurov: ACL validation semantics have changed for portal nodes. Update masters via snapshot.
 * ifsmirnov: Sync reshard semantics changed. Update masters via snapshot.
 * renadeen: Added filtering of jobs by has_competitors. Update operation archive to version 33.
 * shakurov: Commit d674773a35 has changed (and fixed) serialization format of TSchedulerPool{Tree}::SpecifiedAttributes_. Update masters via snapshot.
